--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <tr>
                 <td>
 
-                    <img src="din.jpg" alt="ayushagarwal" height="105">
+                    <img src="https://pbs.twimg.com/profile_images/1380427756647841794/XhrxTJgm_400x400.jpg" alt="ayushagarwal" ">
                 </td>
                 <td>
                     <h5>ayushagarwal.in</h5>
